--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-gallery mbr-slider-carousel cid-r90BpvYdks" id="gallery2-4">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-r90BpvYdks" id="gallery2-4">
 
     
 
