--- a/page5.html
+++ b/page5.html
@@ -40,7 +40,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                         <img src="assets/images/logo-autojesi-122x51.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                         <img src="assets/images/logo-autojesi-122x51.png" alt="Mobirise" title="" style="height: 6rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.co">
@@ -51,7 +51,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="page1.html#content5-19">Promo</a>
-                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page2.html#content4-37">Finanziamenti</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#gallery2-4">Gamma</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page3.html#form1-3g">Officina</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page4.html#header1-3m">Usato AutoJesi</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page5.html#slider1-3s">Peugeot Professional</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#footer7-5q">Contatti</a></li>
+                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page2.html#content4-37">Finanziamenti</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#gallery2-4">Gamma</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page3.html#form1-3g">Officina</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page4.html#header1-3m">Usato AutoJesi</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page5.html#slider1-3s">Peugeot Professional</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#footer2-m">Contatti</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="https://mobirise.co">
                         </a>
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="carousel slide cid-raMPBrw2NP" data-interval="false" id="slider1-3s">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="carousel slide cid-raMPBrw2NP" data-interval="false" id="slider1-3s">
 
     
 
