--- a/page10.html
+++ b/page10.html
@@ -40,7 +40,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                         <img src="assets/images/logo-autojesi-122x51.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                         <img src="assets/images/logo-autojesi-122x51.png" alt="Mobirise" title="" style="height: 6rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.co">
@@ -51,7 +51,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="page1.html#content5-19">Promo</a>
-                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page2.html#content4-37">Finanziamenti</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#gallery2-4">Gamma</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page3.html#form1-3g">Officina</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page4.html#header1-3m">Usato AutoJesi</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page5.html#slider1-3s">Peugeot Professional</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#footer7-5q">Contatti</a></li>
+                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page2.html#content4-37">Finanziamenti</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#gallery2-4">Gamma</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page3.html#form1-3g">Officina</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page4.html#header1-3m">Usato AutoJesi</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page5.html#slider1-3s">Peugeot Professional</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#footer2-m">Contatti</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="https://mobirise.co">
                         </a>
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="mbr-section form1 cid-raMrSi53KJ" id="form1-2h">
+<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="mbr-section form1 cid-raMrSi53KJ" id="form1-2h">
 
     
 
@@ -79,7 +79,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Grazie ti ricontatteremo al più presto con i dettagi richiesti, Team Auto Jesi</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GdevXinXE3jpNo2T8UlUZtMQEEom2HStA3JAE+jAuoGuVAguErNFyA9zQoNMFgxUuiYNWzMi9c97v0dqtCiG9yb5etJgfnqWj2hx03wTK5d2/dtR5ZEoGaygKTNEVl7a">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2XdRlRPFHEARK3B08O8AoEiEdCXdfN1koZORMugZ5rLTwXMLbid4eKXhKgvezHevX3lATo4c9XqLpiiqmk275EsuQnMBjAA66sj7UY7hlcf8Z1/LTv984FVDosw8wE4c">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
