--- a/page17.html
+++ b/page17.html
@@ -40,7 +40,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                         <img src="assets/images/logo-autojesi-122x51.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                         <img src="assets/images/logo-autojesi-122x51.png" alt="Mobirise" title="" style="height: 6rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.co">
@@ -51,7 +51,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="page1.html#content5-19">Promo</a>
-                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page2.html#content4-37">Finanziamenti</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#gallery2-4">Gamma</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page3.html#form1-3g">Officina</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page4.html#header1-3m">Usato AutoJesi</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page5.html#slider1-3s">Peugeot Professional</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#footer7-5q">Contatti</a></li>
+                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page2.html#content4-37">Finanziamenti</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#gallery2-4">Gamma</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page3.html#form1-3g">Officina</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page4.html#header1-3m">Usato AutoJesi</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page5.html#slider1-3s">Peugeot Professional</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#footer2-m">Contatti</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="https://mobirise.co">
                         </a>
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create a website for free</a></section><section class="mbr-section form1 cid-raNuxAldIN" id="form1-5w">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-section form1 cid-raNuxAldIN" id="form1-5w">
 
     
 
@@ -79,7 +79,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Grazie, ti contatteremo il prima possibile. Team Auto Jesi</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="L8EVsnDzV7VpdX2d62FiUqJbz6sGraC3Qrxoj2xM6sJDU0FcSQVQw9wLc2BOhNc/A+6lqsFTayIPj7mqitG4l6/v9euZhUxlBbreWqEF9KOKtFuBIZjRpYg3fC0JCp6J">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1N5r2E/5ABwbql7HvLZn76llWeaiyPUICXpHyHVxuiq3rU7Xok5joOFPBqiEF3WirryPhhNaJfWbxXn81QaC+DX7N+8T972CKzD+Wm+g3kr3dDfVp9S7RG5KUCfqPma0">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
