--- a/page7.html
+++ b/page7.html
@@ -40,7 +40,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                         <img src="assets/images/logo-autojesi-122x51.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                         <img src="assets/images/logo-autojesi-122x51.png" alt="Mobirise" title="" style="height: 6rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.co">
@@ -51,7 +51,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="page1.html#content5-19">Promo</a>
-                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page2.html#content4-37">Finanziamenti</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#gallery2-4">Gamma</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page3.html#form1-3g">Officina</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page4.html#header1-3m">Usato AutoJesi</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page5.html#slider1-3s">Peugeot Professional</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#footer7-5q">Contatti</a></li>
+                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page2.html#content4-37">Finanziamenti</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#gallery2-4">Gamma</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page3.html#form1-3g">Officina</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page4.html#header1-3m">Usato AutoJesi</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page5.html#slider1-3s">Peugeot Professional</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#footer2-m">Contatti</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="https://mobirise.co">
                         </a>
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section form1 cid-raMsjldWpx" id="form1-2i">
+<section class="engine"><a href="https://mobirise.info/e">make your own website</a></section><section class="mbr-section form1 cid-raMsjldWpx" id="form1-2i">
 
     
 
@@ -79,7 +79,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Grazie, ti ricontatteremo il prima possibile. Team Auto Jesi,</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="j0rZJNJWbsP691jlCyix3A3AxEDRz6b5dzz1+iCNggSsFNas5NAligVARsSSXR7VmilVElJaWegl830dBEO84ulS35q40LRgaR2WEGKKun2xrAkGwoppCu8zMwd03LhN">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yyjjcoPI9ypwPwqAAaOJmpPLJi2iJimk8N4PLacF1HHx55eF9pG0D9nNLFa634b0rnHAQVrhxSfLFNWGsrNa98i8wCWtMzobyASV5V9OPqbhA3bN+NU8s1aTLnRe71YV">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
